# lab-PS

./: .gitignore  .gitmodules  flake.nix
01/: 01.py  02a.py  02b.py  02c.py  02d.py  02e.py  02f.py  03.py
jpeg/: pyproject.toml  readme.md
jpeg/src/jpeg/: bit_writer.py  cli.py  compressor.py  huffman.py  image.py  main.py  tables.py  transform.py  writer.py
src/01/: 01.py  02a.py  02b.py  02c.py  02d.py  02e.py  02f.py
src/02/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py
src/03/: 01.py  02.py  03.py
src/04/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py
src/05/: 01.py
src/06/: 01.py  02.py  03.py  04.py  05.py  06.py
src/07/: 01.py  02.py  03.py
src/08/: 01.py
src/09/: 01.py  02.py  03.py  04.py
src/10/: 01.py  02.py  03.py  04.py  05.py
src/lib/: complex.py  filters.py  fourier.py  l1regls.py  signal.py  time.py  windows.py
