[project]
name = "jpeg"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Stefan Rizescu", email = "iulian.stefan.rizescu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.7",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.3",
    "typer>=0.21.0",
]

[project.scripts]
cli = "jpeg.main:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
